--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@casl/ability": "6.5.0",
     "@casl/vue": "2.2.1",
-    "@devindex/vue-mask": "^2.0.3",
     "@floating-ui/dom": "1.2.7",
     "@mdi/font": "5.9.55",
     "@tabler/icons": "2.17.0",
+    "@titou10/v-mask": "^1.1.0",
     "@vuepic/vue-datepicker": "^6.1.0",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "10.1.0",
@@ -28,6 +28,7 @@
     "crypto-js": "^4.1.1",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.2",
+    "maska": "^2.1.10",
     "pdfmake": "^0.2.7",
     "pinia": "2.0.35",
     "prismjs": "1.29.0",
