--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,21 +26,12 @@ jobs:
     - name: Build
       run: yarn build
 
-    - name: Decode SSH key
-      id: decode_key
-      run: echo "${{ secrets.SCP_KEY }}" | base64 --decode > id_rsa
-      shell: bash
-
-    - name: Set permissions for SSH key
-      run: chmod 600 id_rsa
-      shell: bash
-
     - name: Deploy to server
       uses: appleboy/scp-action@master
       with:
         host: 211.45.163.74
         username: forge
-        key_path: ./id_rsa
+        key: ${{ secrets.SCP_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         source: "public/build"
         target: "/home/forge/team.payvery.kr"
