--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -29,21 +29,21 @@ endpoints:
       user_name:
         name: user_name
         description: '가맹점 아이디'
-        required: false
-        example: sit
+        required: true
+        example: nisi
         type: string
         enumValues: []
         custom: []
       user_pw:
         name: user_pw
         description: '가맹점 패스워드'
-        required: false
+        required: true
         example: voluptatem
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: sit
+      user_name: nisi
       user_pw: voluptatem
     fileParameters: []
     responses:
@@ -141,7 +141,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: omnis
+        example: dolorem
         type: string
         enumValues: []
         custom: []
@@ -150,7 +150,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: omnis
+      search: dolorem
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -473,7 +473,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer gDd8ZfkEc63haeVv546P1ba'
+      - 'Bearer a615bakg4PfVdZ8e36hvDEc'
     controller: null
     method: null
     route: null
