--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -15,7 +15,7 @@ endpoints:
       subgroup: ''
       subgroupDescription: ''
       title: 로그인
-      description: ''
+      description: '각 한도의 종료시간이 시작시간보다 작을 경우, 종료시간은 다음날로 계산됩니다.'
       authenticated: false
       custom: []
     headers:
@@ -30,7 +30,7 @@ endpoints:
         name: user_name
         description: '가맹점 아이디'
         required: true
-        example: ex
+        example: sunt
         type: string
         enumValues: []
         custom: []
@@ -38,13 +38,13 @@ endpoints:
         name: user_pw
         description: '가맹점 패스워드'
         required: true
-        example: eligendi
+        example: a
         type: string
         enumValues: []
         custom: []
     cleanBodyParameters:
-      user_name: ex
-      user_pw: eligendi
+      user_name: sunt
+      user_pw: a
     fileParameters: []
     responses:
       -
@@ -55,7 +55,26 @@ endpoints:
               "user": {
                   "id": 12,
                   "user_name": "test0001",
-                  "level": 10
+                  "level": 10,
+                  "single_payment_limit_s_tm" : "23:00",
+                  "single_payment_limit_e_tm" : "07:00",
+                  "single_payment_limit_amount" : 3000000,
+                  "specified_time_disable" : [
+                      {
+                          "id": 1,
+                          "mcht_id": 12,
+                          "disable_s_tm": "23:00",
+                          "disable_e_tm": "07:00",
+                          "disable_type": 0
+                      },
+                      {
+                          "id": 2,
+                          "mcht_id": 12,
+                          "disable_s_tm": "23:00",
+                          "disable_e_tm": "07:00",
+                          "disable_type": 1
+                      }
+                  ]
               }
           }
         headers: []
@@ -76,6 +95,86 @@ endpoints:
         required: false
         example: null
         type: object
+        enumValues: []
+        custom: []
+      user.level:
+        name: user.level
+        description: '로그인 레벨'
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
+      user.single_payment_limit_s_tm:
+        name: user.single_payment_limit_s_tm
+        description: '단건결제한도 시작시간'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      user.single_payment_limit_e_tm:
+        name: user.single_payment_limit_e_tm
+        description: '단건결제한도 종료시간'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      user.single_payment_limit_amount:
+        name: user.single_payment_limit_amount
+        description: '단건결제한도 상한금'
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
+      user.specified_time_disable:
+        name: user.specified_time_disable
+        description: '지정시간 거래제한 정보'
+        required: false
+        example: null
+        type: object
+        enumValues: []
+        custom: []
+      user.specified_time_disable.id:
+        name: user.specified_time_disable.id
+        description: '지정시간 거래제한 고유번호'
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
+      user.specified_time_disable.mcht_id:
+        name: user.specified_time_disable.mcht_id
+        description: '가맹점 고유번호'
+        required: false
+        example: null
+        type: integer
+        enumValues: []
+        custom: []
+      user.specified_time_disable.disable_s_tm:
+        name: user.specified_time_disable.disable_s_tm
+        description: '거래제한 시작시간'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      user.specified_time_disable.disable_e_tm:
+        name: user.specified_time_disable.disable_e_tm
+        description: '종료제한 시작시간'
+        required: false
+        example: null
+        type: string
+        enumValues: []
+        custom: []
+      user.specified_time_disable.disable_type:
+        name: user.specified_time_disable.disable_type
+        description: '제한타입(0=결제금지,1=이체금지)'
+        required: false
+        example: null
+        type: integer
         enumValues: []
         custom: []
     auth: []
@@ -256,7 +355,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer fDc546agEh8dve1ZkbP3a6V'
+      - 'Bearer ZkV4bgaad6P1Df3Ehecv586'
     controller: null
     method: null
     route: null
@@ -319,7 +418,7 @@ endpoints:
         name: search
         description: '검색어(MID, TID, 거래번호, 승인번호, 발급사, 매입사, 결제모듈 별칭)'
         required: false
-        example: deserunt
+        example: at
         type: string
         enumValues: []
         custom: []
@@ -328,7 +427,7 @@ endpoints:
       page_size: 20
       s_dt: '2023-11-01'
       e_dt: '2023-11-30'
-      search: deserunt
+      search: at
     bodyParameters: []
     cleanBodyParameters: []
     fileParameters: []
@@ -651,7 +750,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer cP1Z6ahEfeb38VdvaD5k64g'
+      - 'Bearer fk641gDv6Z53aPehbadEVc8'
     controller: null
     method: null
     route: null
@@ -922,7 +1021,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer 1hfPa4adbv58ZD3cgE66kVe'
+      - 'Bearer EacV6h5DfkPbaZ6ed8341vg'
     controller: null
     method: null
     route: null
@@ -985,7 +1084,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer cb3Z6af6hPdak5vg1DEV8e4'
+      - 'Bearer aEe315bv86DgcZPVk6fh4da'
     controller: null
     method: null
     route: null
@@ -1048,7 +1147,7 @@ endpoints:
     auth:
       - headers
       - Authorization
-      - 'Bearer a466DVEh3g5abZfkcd8e1Pv'
+      - 'Bearer a6hdk13b6Eeg5Z4vDca8PVf'
     controller: null
     method: null
     route: null
