--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "3.0",
         "league/flysystem-sftp-v3": "3.0",
         "pragmarx/google2fa-laravel": "^2.2",
         "predis/predis": "^2.1"
