--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios-mock-adapter": "1.21.4",
     "chart.js": "4.3.0",
     "crypto-js": "^4.1.1",
+    "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^3.1.2",
     "pdfmake": "^0.2.7",
